--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -191,7 +191,6 @@ section {
     white-space: nowrap;
 }
 .tile-image {
-	border:1px solid rgba(0,0,0, .5);
 	display:inline-block;
 	vertical-align: top;
 }
@@ -200,6 +199,7 @@ section {
     font-size: 14px;
     display:inline-block;
     vertical-align: top;
+    width: 400px;
 }
 .btn {
 	display: block;
