--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -200,24 +200,27 @@ section {
     display:inline-block;
     vertical-align: top;
     width: 400px;
+    white-space: normal;
 }
 .btn {
 	display: block;
 	padding: 6px 12px;
 	border-radius:4px;
 	background-color: #14A8D6;
-	border:1px solid #14A8D6;
+	border:1px solid #1296bf;
 	transition: .3s background-color ease-in-out;
 	color: white;
 	text-align: center;
-	margin-top: 10px;
+	margin-top: 20px;
 }
 .btn:hover {
-	background-color: #14A8D6;
+	background-color: #1083a7;
+    border-color: #1083a7;
 }
 .btn:focus,
 .btn:active {
-	background-color: #14A8D6;
+	background-color: #0d7190;
+    border-color: #0d7190;
 }
 .close {
 	position: absolute;
