--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -196,11 +196,22 @@ section {
 }
 .tile-info {
 	padding-left: 20px;
-    font-size: 14px;
+    font-size: 16px;
     display:inline-block;
     vertical-align: top;
     width: 400px;
     white-space: normal;
+}
+.tile-heading h3 {
+    font-size: 22px;
+    margin-bottom: 12px;
+}
+.tile-heading span {
+    font-size: 22px;
+    margin-bottom: 12px;
+}
+.tile-info p{
+    margin-bottom: 10px;
 }
 .btn {
 	display: block;
