--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -181,8 +181,10 @@ section {
 	display: block;
 	position: absolute;
 	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	left: 0;
+    right: 0;
+    margin: 0 auto;
+	transform: translateY(-50%);
 	z-index: 2;
 	background-color: white;
 	border: 0;
