--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -178,8 +178,8 @@ section {
 	font-size: 0;
 }
 .active .tile-content {
-	display: block;
-	position: absolute;
+	display: flex;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -187,31 +187,26 @@ section {
 	background-color: white;
 	border: 0;
 	box-shadow: 0 0 5px rgba(0,0,0,.5);
-    padding: 20px;
-    white-space: nowrap;
+    max-width: 100%;
 }
-.tile-image {
-	display:inline-block;
-	vertical-align: top;
+.project-image {
+    padding: 30px;
 }
-.tile-info {
-	padding-left: 20px;
+.project-info {
+    padding: 30px;
     font-size: 16px;
-    display:inline-block;
-    vertical-align: top;
     width: 400px;
-    white-space: normal;
 }
-.tile-heading h3 {
+.project-title {
     font-size: 22px;
     margin-bottom: 12px;
 }
-.tile-heading span {
+.project-date {
     font-size: 18px;
     margin-bottom: 12px;
     display:block;
 }
-.tile-info p{
+.project-desc {
     margin-bottom: 10px;
 }
 .btn {
@@ -240,10 +235,11 @@ section {
 	width: 40px;
 	text-align: center;
 	line-height: 40px;
-	top: 0px;
-	right: 0px;
+	top: -40px;
+	right: -40px;
 	color: inherit;
 	font-size: 22px;
+    color: white;
 }
 
 
@@ -265,6 +261,10 @@ footer {
 	.tile {
 	    flex: 0 0 33%;
 	}
+    .tile-content {
+        flex-direction: column;
+        width: 100%;
+    }
 }       
 @media (max-width:479px) {
 	.tile {
