--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -5,7 +5,7 @@ body {
     font-family:'Montserrat', Arial, sans-serif;
 }
 .modal-open{
-    overflow-y: none;
+    overflow-y: hidden;
 }
 h1, h2, h3, h4, h5, strong {
     font-weight: 300;
@@ -188,18 +188,25 @@ header {
     max-height: calc(100% - 120px);
     margin: 60px;
     overflow: hidden;
+    width:1300px;
 }
 .project-image {
     padding: 30px;
+    max-width:calc(100% - 400px);
+    width:100%;
 }
-.project-image img { 
+.project-image img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
 }
 .project-info {
     padding: 30px;
-    font-size: 16px;
     width: 400px;
     overflow-y: auto;
     overflow-x: hidden;
+    flex: 1 0 auto;
 }
 .project-title {
     font-size: 22px;
@@ -311,7 +318,9 @@ footer {
 /* Responsive */
 
 @media (max-width:1199px) {
-
+    body {
+        font-size: 14px;
+    }
 }
 @media (max-width:992px) {
     #content-wrapper {
