--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -95,8 +95,11 @@ header {
 .content-section {
     padding: 10px 20px;
 }
+.main-heading {
+    font-size: 26px;
+}
 .content-heading {
-	margin: 10px 0;
+    margin: 10px 0;
     opacity: .7;
     font-size: 22px;
 }
@@ -334,11 +337,28 @@ footer {
 	}
 } 
 @media (max-width:767px) {
+    .card-info > * {
+        padding: 6px 0;
+    }
+    .name {
+        font-size: 26px;
+    }
+    .position {
+        font-size: 20px;
+    }
     .contact-info li:not(:last-child)::after {
         display: none;
     }
     .contact-info li {
         display: block;
+        margin: 2px auto;
+    }
+    .main-heading {
+        font-size: 22px;
+    }
+    .content-heading {
+        font-size: 18px;
+        margin: 6px 0;
     }
     .tile {
 	    flex: 0 0 33%;
@@ -362,10 +382,23 @@ footer {
 } 
 @media (max-width:479px) {
     #content-wrapper {
-        padding: 0 10px;
+        padding: 0 2px;
     }
-    .card-info > * {
-        margin: 6px 0;
+    .name {
+        font-size: 24px;
+    }
+    .position {
+        font-size: 18px;
+    }
+    .contact-info li {
+        margin: 8px auto;
+        font-size: 12px;
+    }
+    .main-heading {
+        font-size: 20px;
+    }
+    .content-heading {
+        font-size: 16px;
     }
     .tile-container {
         margin-left: -8px;
