--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -181,15 +181,14 @@ header {
 }
 .tile-content {
     display: flex;
-    top: calc(50% - 40px);
-    left: calc(50% - 40px);
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
     background-color: white;
     box-shadow: 0 0 5px rgba(0,0,0,.5);
-    max-width: calc(100% - 80px);
-    max-height: calc(100% - 80px);
-    margin: 40px;
+    max-width: 100%;
+    max-height: 100%;
     overflow: hidden;
     width: 1300px;
 }
@@ -226,6 +225,7 @@ header {
 .project-desc {
     overflow-y: auto;
     overflow-x: hidden;
+    max-height: calc(100vh - 232px);
 }
 .project-desc p {
     margin-bottom: 10px;
@@ -287,8 +287,7 @@ header {
     position: absolute;
     opacity: .6;
     transition: opacity .3s ease-in-out;
-    pointer-events: auto;
-    padding: 8px;
+    pointer-events: auto;   
 }
 .move-slide:hover,
 #close-slide:hover {
@@ -300,6 +299,7 @@ header {
     height: 50%;
     top: 50%;
     transform: translateY(-50%);
+    padding: 8px;
 }
 .move-slide i{
     position: relative;
@@ -388,12 +388,27 @@ footer {
     .project-content {
         max-width: 100%;
         padding: 50px;
+        max-height: 50vh;
     }
     .project-image {
-        padding-bottom:10px;
+        padding-bottom: 10px;
+        text-align: center;
     }
     .project-info {
         padding-top: 10px;
+    }
+    .project-title {
+        font-size: 18px;
+        float: left;
+        line-height: inherit;
+    }
+    .project-date {
+        font-size: 18px;
+        float: right;
+    }
+    .project-desc {
+        clear: both;
+        max-height: calc(50vh - 120px);
     }
 }
 @media (max-width:632px) {
