--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -188,7 +188,8 @@ header {
 	max-width: 100%;
 	transition: opacity .3s ease-in-out, border-color .3s ease-in-out;
 }
-.tile-thumbnail:hover{
+.tile-thumbnail:hover,
+.tile:focus .tile-thumbnail{
 	opacity:.85;
 	border-color: #14A8D6;
 }
@@ -201,6 +202,9 @@ header {
 .tile.inactive {
 	cursor: pointer;
 }
+.tile:focus{
+	outline: none;
+} 
 .tile-content {
     display: flex;
     top: 50%;
