--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -76,23 +76,42 @@ section {
 /* Header */
 
 header {
+    background-color: rgb(0, 119, 204);
+}
+nav {
+    font-size: 0;
 }
 .menu {
-    display: inline-block;
+    display: flex;
     list-style: none;
     padding-left: 0;
     margin-left: -15px;
     margin-right: -15px;
+    
 }
 .menu-item {
-    float: left;
+    font-size: 14px;
+    display: inline-block;
+    text-align: center;
+    flex:1 0 auto;
 }
 .menu-link {
     display: block;
-    line-height: 50px;
-    font-size: 16px;
-    padding: 0 15px;
-    margin: 0 5px;
+    line-height: 40px;
+    padding: 0 20px;
+    color: rgb(240,240,240);
+}
+.menu-link:hover {
+    color: #fff;
+}
+.selected .menu-link,
+.menu-link:focus,
+.menu-link:active {
+    color: #fff;
+    text-decoration: underline;
+}
+.menu-link i {
+    padding-right: 8px;
 }
 
 
