--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -300,7 +300,7 @@ header {
 
 footer {
     margin-top: auto;
-	background-color: rgb(44, 52, 54);
+	background-color: rgb(66,66,66);
 }
 .contact-info {
 	display: flex;
