--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -300,13 +300,13 @@ header {
 
 footer {
     margin-top: auto;
-	background-color: rgb(66,66,66);
+	background-color: rgb(74, 76, 74);
 }
 .contact-info {
 	display: flex;
 	text-align: center;
-	padding-top: 0;
-	padding-bottom: 0;
+	padding-top: 4px;
+	padding-bottom: 4px;
 	color: rgb(232,232,232);
 	font-size: 14px;
 }
@@ -318,7 +318,7 @@ footer {
 }
 .contact-item {
 	flex: 1 0 auto;
-	line-height: 44px;
+	line-height: 36px;
 }
 .contact-link {
 	color: inherit;
