--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -48,6 +48,10 @@ a:hover {
 	background-color: #0d7190;
     border-color: #0d7190;
 }
+.card-photo, .resume {
+	display: none;
+}
+
 
 /* Layout */
 
@@ -66,6 +70,9 @@ a:hover {
     max-width: 1140px;
     margin: 0 auto;
 }
+.content-section {
+    padding: 10px 20px;
+}
 .section-break{
     box-shadow: none;
 }
@@ -74,38 +81,8 @@ section {
 }
 
 
+
 /* Header */
-
-header {
-    background-color: rgb(0, 119, 204);
-    position: relative;
-    z-index: 11;
-}
-
-/* Content */
-#content-wrapper,
-#content-container {
-    flex: 1;
-    display: flex;
-}
-#content-wrapper,
-#code-portfolio #content-container {
-	flex-direction: column;
-}
-.content-section {
-    padding: 10px 20px;
-}
-.main-heading {
-    font-size: 26px;
-}
-.content-heading {
-    margin: 10px 0;
-    opacity: .7;
-    font-size: 22px;
-}
-
-
-/* Side */
 
 #code-portfolio #business-card {
 	text-align: center;
@@ -120,14 +97,27 @@ header {
     font-size: 26px;
     opacity: .7;
 }
-.p-street-address::after, .p-region::after {
-	content:',';
-	display: inline;
-}
-.card-photo, .resume {
-	display: none;
-}
 
+
+/* Content */
+
+#main-content,
+#content-container {
+    flex: 1;
+    display: flex;
+}
+#main-content,
+#code-portfolio #content-container {
+	flex-direction: column;
+}
+.main-heading {
+    font-size: 26px;
+}
+.content-heading {
+    margin: 10px 0;
+    opacity: .7;
+    font-size: 22px;
+}
 
 /* Tiles */
 
@@ -305,8 +295,8 @@ footer {
 .contact-info {
 	display: flex;
 	text-align: center;
-	padding-top: 4px;
-	padding-bottom: 4px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 	color: rgb(232,232,232);
 	font-size: 14px;
 }
@@ -320,12 +310,16 @@ footer {
 	flex: 1 0 auto;
 	line-height: 36px;
 }
-.contact-link {
-	color: inherit;
-}
 .contact-item i {
 	margin-right: 14px;
 	color: white;
+}
+.contact-link {
+	color: inherit;
+}
+.p-street-address::after, .p-region::after {
+	content:',';
+	display: inline;
 }
 .contact-item .fa-phone {
 	transform: rotateZ(85deg);
@@ -353,6 +347,9 @@ footer {
 	}
 	.contact-info {
 		flex-direction: column;
+		padding-top: 4px;
+		padding-bottom: 4px;
+		font-size: 13px;
 	}
 	.contact-info li:first-child,
 	.contact-info li:last-child {
