--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -61,6 +61,7 @@ a:hover {
     min-height: 100vh;
     position: relative;
     background-color: rgb(251,252,253);
+    overflow-x: hidden;
 }
 .section-wrapper {
     padding: 0 100px;
@@ -73,6 +74,12 @@ a:hover {
 .content-section {
     padding: 10px 20px;
 }
+.content-section::before,
+.content-section::after {
+    content: '';
+    clear: both;
+    display: table;
+}
 .section-break{
     box-shadow: none;
 }
@@ -83,9 +90,29 @@ section {
 
 
 /* Header */
+header {
+    background-color: #0077CC;
+    margin-bottom: 16px;
+}
+.header-link {
+    color: white;
+    display: block;
+    line-height: 40px;
+    padding: 0 12px;
+}
+.header-link > * {
+    margin: 0 8px;
+    display: inline-block;
+}
+#about-link {
+    float: left;
+}
+#contact-link {
+    float: right;
+}
 
 #code-portfolio #business-card {
-	text-align: center;
+    text-align: center;
 }
 .card-info > * {
     padding: 10px 0;
@@ -118,6 +145,51 @@ section {
     opacity: .7;
     font-size: 22px;
 }
+.side-bar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    background: #0077CC;
+    width: 100%;
+    max-width: 500px;
+    color: white;
+    box-shadow: 0px 0 3px rgb(30,30,30);
+    z-index: 60;
+    transition: .3s left ease-in-out, .3s right ease-in-out
+}
+#about {
+    left: -600px;
+}
+#about.open {
+    left: 0;
+}
+#contact {
+    right: -600px;
+}
+#contact.open {
+    right: 0;
+}
+.close-side {
+    position: absolute;
+    top: 0;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    z-index: 70;
+}
+#about .close-side {
+    right: 0;
+}
+#contact .close-side {
+    left: 0;
+}
+#contact .side-heading {
+    text-align: right;
+}
+
 
 /* Tiles */
 
@@ -129,8 +201,7 @@ section {
 }
 .tile {	
 	flex: 0 0 25%;
-	padding: 18px;
-	
+	padding: 18px;	
 }        
 .tile-thumbnail {
 	border: 1px solid rgba(0,0,0,.3);
