--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -422,9 +422,10 @@ footer {
         background-color: rgb(244,244,244);
     }
     .move-slide {
-        height: 50%;
-        top: 0;
+        height: 20%;
+        top: 10%;
         transform: none;
+        margin-top: 30px;
     }
 }
 @media (max-width:632px) {
