--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -394,14 +394,17 @@ footer {
         max-width: 100%;
         max-height: 100%;
         margin: 0;
+		height: 100vh;
     }
     .project-content {
         max-width: 100%;
-		height: 100%;
         max-height: 50vh;
     }
     .project-image {
         padding-bottom: 10px;
+    }
+	.project-info {
+        padding-top: 10px;
     }
     .project-title {
         font-size: 18px;
