--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -398,10 +398,12 @@ footer {
     }
     .project-content {
         max-width: 100%;
+		height: 100%;
         max-height: 50vh;
     }
     .project-image {
         padding-bottom: 10px;
+		margin: 0 auto;
     }
 	.project-info {
         padding-top: 10px;
