--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -465,7 +465,8 @@ footer {
         padding: 10px;
     }
     .move-slide {
-        height: 50%;
+		top: 50px;
+        height: calc(50% - 50px);
         transform: none;
     }
 }
