--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -390,44 +390,6 @@ footer {
         font-size: 18px;
         margin: 6px 0;
     }
-    .tile-content {
-        top: 50%;
-        left: 50%;
-        flex-direction: column;
-        max-width: 100%;
-        max-height: 100%;
-        margin: 0;
-		height: 100vh;
-    }
-    .project-content {
-        max-width: 100%;
-		height: 100%;
-        max-height: 50vh;
-    }
-    .project-image {
-        padding-bottom: 10px;
-		margin: 0 auto;
-    }
-	.project-info {
-        padding-top: 10px;
-    }
-    .project-title {
-        font-size: 18px;
-        float: left;
-        line-height: inherit;
-    }
-    .project-date {
-        font-size: 18px;
-        float: right;
-    }
-    .project-desc {
-        clear: both;
-        max-height: calc(50vh - 120px);
-        border: 1px solid rgba(40,40,40,.15);
-        padding: 14px;
-        background-color: rgb(244,244,244);
-    }
-
 }
 @media (max-width:632px) {
     .section-wrapper {
@@ -474,5 +436,45 @@ footer {
 		top: 50px;
         height: calc(50% - 50px);
         transform: none;
+    }
+}
+
+@media (orientation: portrait) {
+	.tile-content {
+        top: 50%;
+        left: 50%;
+        flex-direction: column;
+        max-width: 100%;
+        max-height: 100%;
+        margin: 0;
+		height: 100vh;
+    }
+    .project-content {
+        max-width: 100%;
+		height: 100%;
+        max-height: 50vh;
+    }
+    .project-image {
+        padding-bottom: 10px;
+		margin: 0 auto;
+    }
+	.project-info {
+        padding-top: 10px;
+    }
+    .project-title {
+        font-size: 18px;
+        float: left;
+        line-height: inherit;
+    }
+    .project-date {
+        font-size: 18px;
+        float: right;
+    }
+    .project-desc {
+        clear: both;
+        max-height: calc(50vh - 120px);
+        border: 1px solid rgba(40,40,40,.15);
+        padding: 14px;
+        background-color: rgb(244,244,244);
     }
 }
