--- a/styles/carousel.less
+++ b/styles/carousel.less
@@ -81,6 +81,7 @@ body, h1, h2, h3, h4, h5, p, ul, img, hr {
 	display: flex;
 	top: 0;
 	left: 0;
+	rigt: 0;
 	z-index: 2;
 	.transition(transform);
 }
@@ -149,14 +150,6 @@ body, h1, h2, h3, h4, h5, p, ul, img, hr {
 	font-weight: 600;
 	font-size: @font-size + 1;
 	line-height: 1.2;
-}
-#carousel-controls {
-	position: absolute;
-	top: 0;
-	left: 25px;
-	right: 25px;
-	bottom: 0;
-	pointer-events: none;
 }
 .move-slide {
 	.center-vertical();
