--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -65,7 +65,7 @@ hr {
   display: flex;
   top: 0;
   left: 0;
-  rigt: 0;
+  right: 0;
   z-index: 2;
   -webkit-transition: transform 0.3s ease-in-out;
   -moz-transition: transform 0.3s ease-in-out;
