--- a/styles/carousel.less
+++ b/styles/carousel.less
@@ -81,7 +81,7 @@ body, h1, h2, h3, h4, h5, p, ul, img, hr {
 	display: flex;
 	top: 0;
 	left: 0;
-	rigt: 0;
+	right: 0;
 	z-index: 2;
 	.transition(transform);
 }
