--- a/styles/carousel.less
+++ b/styles/carousel.less
@@ -48,6 +48,13 @@ h1, h2, h3, h4, h5, strong {
 body, h1, h2, h3, h4, h5, p, ul, img, hr {
 	.reset();
 }
+.page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    position: relative;
+    overflow-x: hidden;
+}
 #carousel-container {
 	margin: 0 auto;
 	padding: 25px;
