--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -32,6 +32,13 @@ hr {
   padding: 0;
   border: 0;
 }
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  position: relative;
+  overflow-x: hidden;
+}
 #carousel-container {
   margin: 0 auto;
   padding: 25px;
