--- a/styles/carousel.less
+++ b/styles/carousel.less
@@ -267,10 +267,12 @@ body, h1, h2, h3, h4, h5, p, ul, img, hr {
 	}
 	#prev-slide {
 		left: 50%;
-		margin-left: -150px;
+		margin-left: -175px;
+		width: 100px;
 	}
 	#next-slide {
 		right: 50%;
-		margin-right: -150px;
+		margin-right: -175px;
+		width: 100px;
 	}
 }
