--- a/styles/carousel.less
+++ b/styles/carousel.less
@@ -1,6 +1,7 @@
 /* Variables */
 
 @text-color: #250858;
+@secondary-color: #A6CE39;
 @fallback-fonts: Arial, sans-serif;
 @font-stack: 'Lato', @fallback-fonts;
 @font-size: 16px;
@@ -172,10 +173,15 @@ body, h1, h2, h3, h4, h5, p, ul, img, hr {
 	&:hover {
 		opacity: .4;
 	}
-	&:active,
-	&:focus	{
+	&:active {
 		opacity: .8;
+	}
+	&:focus	{
 		outline: none;
+		
+		img {
+		
+		}
 	}
 }
 #prev-slide {
