--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -141,10 +141,31 @@ section {
     margin-left: -18px;
     margin-right: -18px;
 }
-.tile {	
-	flex: 0 0 20%;
-	padding: 18px;	
-}        
+.tile {
+    flex: 0 0 20%;
+    padding: 18px;
+    position: relative;
+}
+.tile[data-type='demo']::after {
+    content: "demo";
+    text-transform: uppercase;
+    position: absolute;
+    left: 18px;
+    right: 18px;
+    top: 18px;
+    bottom: 18px;
+    margin: auto 0;
+    height: 40px;
+    background: rgba(30,30,30, .8);
+    color: white;
+    opacity: .9;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 20px;
+}       
 .tile-thumbnail {
 	border: 1px solid rgba(0,0,0,.3);
 	max-height: 100%;
