--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -136,14 +136,13 @@ section {
 /* Tiles */
 
 .tile-container {
-	display: flex;
-	flex-wrap: wrap;
-    margin-left: -18px;
-    margin-right: -18px;
+	display: grid;
+    grid-gap: 18px;
+    grid-template-columns:auto;
+    justify-items: stretch;
 }
 .tile {
-    flex: 0 0 20%;
-    padding: 18px;
+    padding: 0;
     position: relative;
     line-height: 0;
 }
@@ -151,10 +150,10 @@ section {
     content: "demo";
     text-transform: uppercase;
     position: absolute;
-    left: 18px;
-    right: 18px;
-    top: 18px;
-    bottom: 18px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     margin: auto 0;
     height: 40px;
     background: rgba(30,30,30, .8);
