--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -167,6 +167,7 @@ section {
     font-weight: bold;
     font-size: 16px;
     transition: height .3s;
+    overflow:hidden;
 }       
 .tile[data-type='demo']:hover::after {
     height:0;
