--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -146,6 +146,7 @@ section {
     padding: 0;
     position: relative;
     line-height: 0;
+    border: 1px solid rgba(0,0,0,.3);
 }
 .tile[data-type='demo']::after {
     content: "demo";
@@ -168,12 +169,14 @@ section {
     font-size: 16px;
     transition: height .3s;
     overflow:hidden;
-}       
+}   
+.tile:hover {
+    border-color: #14A8D6;
+}    
 .tile[data-type='demo']:hover::after {
     height:0;
 }
 .tile-thumbnail {
-	border: 1px solid rgba(0,0,0,.3);
 	max-height: 100%;
 	max-width: 100%;
 	transition: opacity .3s ease-in-out, border-color .3s ease-in-out;
@@ -181,13 +184,12 @@ section {
 .tile-thumbnail:hover,
 .tile:focus .tile-thumbnail{
 	opacity:.85;
-	border-color: #14A8D6;
+
 }
 .active .tile-thumbnail,
 .tile-thumbnail:focus,
 .tile-thumbnail:active{
 	opacity:.65;
-	border-color: #14A8D6;
 }
 .tile.inactive {
 	cursor: pointer;
