--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -146,11 +146,15 @@ section {
     line-height: 0;
     border: 1px solid rgba(0,0,0,.3);
     background-color: white;
-    padding: 4px;
+    padding: 5px;
     transition: padding .3s;
 }
 .tile-thumbnail-container {
     position: relative;
+    left: -1px;
+    right: -1px;
+    top: -1px;
+    bottom: -1px;
 }
 [data-type='demo'] .tile-thumbnail-container::after {
     content: "demo";
@@ -178,12 +182,12 @@ section {
     border-color: #14A8D6;
     padding:0;
 }    
-.tile[data-type='demo']:hover::after {
+.tile[data-type='demo']:hover .tile-thumbnail-container::after {
     height:0;
 }
 .tile-thumbnail {
-	max-height: 100%;
-	max-width: 100%;
+	max-height: calc(100% + 2px);
+	max-width: calc(100% + 2px);
 	transition: opacity .3s ease-in-out, border-color .3s ease-in-out;
 }
 .tile::hover .tile-thumbnail,
