--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -197,7 +197,6 @@ section {
 }
 .thumbnail-details {
     position:absolute;
-    transform:translateY(100%);
     transition: transform .3s;
     width:100%;
     left:0;
@@ -205,9 +204,10 @@ section {
     background-color: rgba(30,30,30,.8);
     line-height: 1.43;
     padding:10px;
+    margin-top:4px;
 }
 .tile-thumbnail:hover .thumbnail-details{
-    transform:translateY(0);
+    transform:translateY(-100%);
 }
 .tile.inactive {
 	cursor: pointer;
