--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -12,7 +12,8 @@ body {
 }
 h1, h2, h3, h4, h5, strong {
     font-weight: 300;
-    line-height: 1.1;  
+    line-height: 1.1;
+    font-family:"Quicksand", arial, sans-serif;  
 }
 body, h1, h2, h3, h4, h5, p, ul, img, hr {
     margin: 0;
